# newrelic-opentracing-cpp

./: .gitignore  CMakeLists.txt  README.md
config-examples/: default.conf  newrelic.conf  nginx.conf  nginxTransactionFilters.txt  tracer.conf
docker/: InstallInDocker.sh  README.md  Using Docker.md  docker-compose.yml  docker.commands
docker/downloaded/: nginx.conf  nr-opentracing-config.conf
docker/downloaded/conf.d/: default.conf
include/newrelic/: opentracing.h
installer/: README.md  install.sh
installer/downloaded/: newrelic-daemon.sh  nginx.conf.sample  nr-opentracing-config.conf
src/: config.cpp  config.h  dynamic_load.cpp  log.cpp  log.h  span.cpp  span.h  string_utils.h  tracer.cpp  tracer.h  tracer_factory.cpp  tracer_factory.h
